plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/hmppLibAndConsumer/lib-and-app/lib/src/jvmAndJsTest/kotlin/LibCommonTest.kt.after
package com.h0tk3y.hmpp.klib.demo

import kotlin.test.Test

class <!LINE_MARKER("descr='Run Test'")!>LibJvmAndJsTest<!> {
    @Test
    fun <!LINE_MARKER("descr='Run Test'")!>testLibActual<!>() {
        LibCommonMainExpect().libCommonMainExpectFun()
        LibCommonMainExpect().additionalFunInJvmAndJsActual()
    }
}